feat: pathfinding library refactor, convexhull tests.